home page included

--- a/index.html
+++ b/index.html
@@ -34,7 +34,74 @@
  </ul>
 </nav>
 
-<div class="heigh"></div>   <!--   this div is for height between header and footer -->
+<section class="s1">
+  <img id="s1img" src="images/Mighty Fitness (1).png" alt="">
+<div class="mainsubmit">
+  <div class="submit_1"> Login</div>
+  <div class="submit_1">Signup</div>
+</div>
+<p>"Revitalize Your Routine with Mighty Fitness"</p>
+</section>
+<hr class="hr1">
+<section class="s2">
+<div class="d1">
+  <img src="images/Mighty Fitness (1) (1).png" alt="">
+</div>
+<div class="d2">
+  <p class="p1">Our<span class="colour1"> Services:-</span> </p> <span id="element"></span>
+      
+</div>
+</section>
+<script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+<script>
+var typed = new Typed('#element', {
+  strings: [
+            'Bmr calculator',
+            'Calories tracer',
+            'Chat buddy',
+            'Suppliments ',
+            'Workout plan'
+        ],
+  typeSpeed: 80,
+  loop: true, 
+}); 
+</script>
+<section class="s3">
+<div class="s3div">
+<img src="images/achatbot.png" alt="">
+<h1>Chat Bot</h1>
+<p>
+  "Unleash the power of personalized fitness guidance with MightyFitness Chatbot—your 24/7 virtual companion on the journey to a healthier, stronger you."</p>
+</div>
+<div class="s3div">
+  <img src="images/abmrcalculator.png" alt="">
+  <h1>Bmr calculator</h1>
+  <p>"Elevate your fitness journey with MightyFitness BMR Calculator—precision at your fingertips, tailoring your nutrition and goals for optimal health and vitality."</p>
+</div>
+<div class="s3div">
+  <img src="images/acaloriesrestrictor.png" alt="">
+  <h1>Calories  Restrictor</h1>
+  <p>"Empower your wellness goals with MightyFitness Calories Restrictor—your personalized tool for mindful eating, guiding you towards a balanced and healthier lifestyle."</p>
+</div>
+</section>
+<section class="s4">
+  <div class="s4div">
+      <img src="images/asuppliment.png" alt="">
+      <h1>Suppliments</h1>
+      <p>"Maximize your fitness potential with MightyFitness Supplement Guide—unlock essential information, personalized recommendations, and discover optimal sources for your nutritional needs."</p>
+  </div>
+  <div class="s4div">
+      <img src="images/aworkout.png" alt="">
+      <h1>Workout plans</h1>
+      <p>"Transform your fitness journey with MightyFitness Workout Plans—crafted for your goals, providing structured routines to elevate your strength, endurance, and overall well-being."</p>
+  </div>
+  <div class="s4div">
+      <img src="images/ahealthtracer.png" alt="">
+      <h1>Health Tracker</h1>
+      <p>
+          "Elevate your well-being with MightyFitness Health Tracker—seamlessly monitor and optimize your health journey, empowering you to achieve and maintain your wellness goals."</p>
+  </div>
+</section>
 
 
 <!-- chatbot -->
