added physical fitness tracker

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ var typed = new Typed('#element', {
       <p>"Transform your fitness journey with MightyFitness Workout Plans—crafted for your goals, providing structured routines to elevate your strength, endurance, and overall well-being."</p>
   </div>
   <div class="s4div">
-      <img src="images/ahealthtracer.png" alt="">
+     <a href="physicalfitness.html"><img src="images/ahealthtracer.png" alt=""></a>
       <h1>Health Tracker</h1>
       <p>
           "Elevate your well-being with MightyFitness Health Tracker—seamlessly monitor and optimize your health journey, empowering you to achieve and maintain your wellness goals."</p>
