linked cal and bmr html pages with home

--- a/index.html
+++ b/index.html
@@ -74,12 +74,12 @@ var typed = new Typed('#element', {
   "Unleash the power of personalized fitness guidance with MightyFitness Chatbot—your 24/7 virtual companion on the journey to a healthier, stronger you."</p>
 </div>
 <div class="s3div">
-  <img src="images/abmrcalculator.png" alt="">
+ <a href="bmr.html"> <img src="images/abmrcalculator.png" alt=""></a>
   <h1>Bmr calculator</h1>
   <p>"Elevate your fitness journey with MightyFitness BMR Calculator—precision at your fingertips, tailoring your nutrition and goals for optimal health and vitality."</p>
 </div>
 <div class="s3div">
-  <img src="images/acaloriesrestrictor.png" alt="">
+  <a href="cal.html"><img src="images/acaloriesrestrictor.png" alt=""></a>
   <h1>Calories  Restrictor</h1>
   <p>"Empower your wellness goals with MightyFitness Calories Restrictor—your personalized tool for mindful eating, guiding you towards a balanced and healthier lifestyle."</p>
 </div>
