--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ var typed = new Typed('#element', {
 </script>
 <section class="s3">
 <div class="s3div">
-<img src="images/achatbot.png" alt="">
+<a href=""><img src="images/achatbot.png" alt=""></a>
 <h1>Chat Bot</h1>
 <p>
   "Unleash the power of personalized fitness guidance with MightyFitness Chatbot—your 24/7 virtual companion on the journey to a healthier, stronger you."</p>
@@ -86,12 +86,12 @@ var typed = new Typed('#element', {
 </section>
 <section class="s4">
   <div class="s4div">
-      <img src="images/asuppliment.png" alt="">
+      <a href="#"><img src="images/asuppliment.png" alt=""></a>
       <h1>Suppliments</h1>
       <p>"Maximize your fitness potential with MightyFitness Supplement Guide—unlock essential information, personalized recommendations, and discover optimal sources for your nutritional needs."</p>
   </div>
   <div class="s4div">
-      <img src="images/aworkout.png" alt="">
+     <a href="#"><img src="images/aworkout.png" alt=""></a>
       <h1>Workout plans</h1>
       <p>"Transform your fitness journey with MightyFitness Workout Plans—crafted for your goals, providing structured routines to elevate your strength, endurance, and overall well-being."</p>
   </div>
