responsiveness of bmr

--- a/physicalfitness.html
+++ b/physicalfitness.html
@@ -319,6 +319,8 @@
         </form>
     </div>
 
+<button class="redirectbtn"><a href="#"></a>Click Here For A Diet Plan</button>
+
     <footer>
         <div class="footer_logoy">
           <div class="flx">
