login & signup connectivity

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
      <li><a  href="#">Home</a></li>
      <li><a href="#">About</a></li>
      <li><a href="#">ChatBot</a></li>
-     <li><a href="#">Login</a></li>
-     <li><a href="#">SignUp</a></li>
+     <li><a href="login.html">Login</a></li>
+     <li><a href="signup.html">SignUp</a></li>
  </ul>
 </nav>
 
 <section class="s1">
   <img id="s1img" src="images/Mighty Fitness (1).png" alt="">
 <div class="mainsubmit">
-  <div class="submit_1"> Login</div>
-  <div class="submit_1">Signup</div>
+  <div class="submit_1"> <li><a href="login.html">Login</a></li></div>
+  <div class="submit_1">  <li><a href="signup.html">SignUp</a></li></div>
 </div>
 <p>"Revitalize Your Routine with Mighty Fitness"</p>
 </section>
