workout plans added

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var typed = new Typed('#element', {
       <p>"Maximize your fitness potential with MightyFitness Supplement Guide—unlock essential information, personalized recommendations, and discover optimal sources for your nutritional needs."</p>
   </div>
   <div class="s4div">
-     <a href="#"><img src="images/aworkout.png" alt=""></a>
+     <a href="workout.html"><img src="images/aworkout.png" alt=""></a>
       <h1>Workout plans</h1>
       <p>"Transform your fitness journey with MightyFitness Workout Plans—crafted for your goals, providing structured routines to elevate your strength, endurance, and overall well-being."</p>
   </div>
