--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
      <script src="https://kit.fontawesome.com/6f0143ff2b.js" crossorigin="anonymous"></script>
+     <link rel="icon" href="images/Mighty_Fitness_black.png">
      <link rel="stylesheet" href="index.css">
      <link rel="stylesheet" href= "chatbot.css">
 </head>
@@ -26,9 +27,8 @@
    <a href="index.html"><img class="Websitelogoy" src="images/Mighty_Fitness_black.png" alt="WEBlogoy"></a>
    <span class="absolute">MightyFitness</span></label></div>
  <ul>
-     <li><a  href="#">Home</a></li>
-     <li><a href="#">About</a></li>
-     <li><a href="#">ChatBot</a></li>
+     <li><a  href="index.html">Home</a></li>
+     <li><a href="about-us.html">About</a></li>
      <li><a href="login.html">Login</a></li>
      <li><a href="signup.html">SignUp</a></li>
  </ul>
@@ -68,7 +68,7 @@ var typed = new Typed('#element', {
 </script>
 <section class="s3">
 <div class="s3div">
-<a href=""><img src="images/achatbot.png" alt=""></a>
+<a href="#"><img src="images/achatbot.png" alt=""></a>
 <h1>Chat Bot</h1>
 <p>
   "Unleash the power of personalized fitness guidance with MightyFitness Chatbot—your 24/7 virtual companion on the journey to a healthier, stronger you."</p>
@@ -157,7 +157,7 @@ var typed = new Typed('#element', {
           
        </div>
          <div class="footer_copyright">
-         <span class="white">// © 2023 MightyCare PVT. LTD. All Rights Reserved.</span>
+         <span class="white">// © 2023 MightyFitness PVT. LTD. All Rights Reserved.</span>
         </div>
       </footer>
 
