--- a/about-us.html
+++ b/about-us.html
@@ -35,7 +35,7 @@
     </ul>
 </nav>
 
-<img src="/images/sbanner.png" alt="banner" class="banner">
+<img src="images/sbanner.png" alt="banner" class="banner">
 
 <section class="section1">
     <div class="section1-div1">
