--- a/bmr.html
+++ b/bmr.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mighty-Fitness</title>
+    <title>Bmr Calculate</title>
      <!-- Google Fonts Link For Icons -->
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
@@ -27,10 +27,9 @@
    <span class="absolute">MightyFitness</span></label></div>
  <ul>
      <li><a  href="index.html">Home</a></li>
-     <li><a href="#">About</a></li>
-     <li><a href="#">ChatBot</a></li>
-     <li><a href="#">Login</a></li>
-     <li><a href="#">SignUp</a></li>
+     <li><a href="about-us.html">About</a></li>
+     <li><a href="login.html">Login</a></li>
+     <li><a href="signup.html">SignUp</a></li>
  </ul>
 </nav>
 
