--- a/physicalfitness.html
+++ b/physicalfitness.html
@@ -27,7 +27,6 @@
        <ul>
            <li><a  href="#">Home</a></li>
            <li><a href="#">About</a></li>
-           <li><a href="#">ChatBot</a></li>
            <li><a href="#">Login</a></li>
            <li><a href="#">SignUp</a></li>
        </ul>
@@ -352,7 +351,7 @@
           
        </div>
          <div class="footer_copyright">
-         <span class="white">// © 2023 MightyCare PVT. LTD. All Rights Reserved.</span>
+         <span class="white">// © 2023 MightyFitness PVT. LTD. All Rights Reserved.</span>
         </div>
       </footer>
 
