--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
      <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
      <script src="https://kit.fontawesome.com/6f0143ff2b.js" crossorigin="anonymous"></script>
-     <link rel="icon" href="images/Mighty_Fitness_black.png">
+     <link rel="icon" href="images/Mighty_Fitness_black.webp">
      <link rel="stylesheet" href="index.css">
      <link rel="stylesheet" href= "chatbot.css">
 </head>
