--- a/about-us.html
+++ b/about-us.html
@@ -9,6 +9,7 @@
     <script src="https://kit.fontawesome.com/6f0143ff2b.js" crossorigin="anonymous"></script>
     <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="about-us.css">
+<link rel="icon" href="images/Mighty_Fitness_black.webp">
     <title>About Us</title>
 </head>
 
@@ -27,11 +28,10 @@
         </label>
     </div>
     <ul>
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">About</a></li>
-        <li><a href="#">ChatBot</a></li>
-        <li><a href="#">Login</a></li>
-        <li><a href="#">SignUp</a></li>
+        <li><a href="login.html">Login</a></li>
+        <li><a href="signup.html">SignUp</a></li>
     </ul>
 </nav>
 
@@ -98,7 +98,7 @@
 
     </div>
     <div class="footer_copyright">
-        <span class="white">// © 2023 MightyCare PVT. LTD. All Rights Reserved.</span>
+        <span class="white">// © 2023 MightyFitness PVT. LTD. All Rights Reserved.</span>
     </div>
 </footer>
 
