--- a/physicalfitness.html
+++ b/physicalfitness.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
       <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
       <script src="https://kit.fontawesome.com/6f0143ff2b.js" crossorigin="anonymous"></script>
+      <link rel="icon" href="images/Mighty_Fitness_black.webp">
       <link rel="stylesheet" href="index.css">
       <link rel="stylesheet" href= "chatbot.css">
       <link rel="stylesheet" href="physicalfitness.css">
@@ -25,10 +26,10 @@
          <a href="index.html"><img class="Websitelogoy" src="images/Mighty_Fitness_black.webp" alt="WEBlogoy"></a>
          <span class="absolute">MightyFitness</span></label></div>
        <ul>
-           <li><a  href="#">Home</a></li>
-           <li><a href="#">About</a></li>
-           <li><a href="#">Login</a></li>
-           <li><a href="#">SignUp</a></li>
+           <li><a  href="index.html">Home</a></li>
+           <li><a href="about-us.html">About</a></li>
+           <li><a href="login.html">Login</a></li>
+           <li><a href="signup.html">SignUp</a></li>
        </ul>
       </nav>
 
@@ -318,7 +319,7 @@
         </form>
     </div>
 
-<button class="redirectbtn"><a href="#"></a>Click Here For A Diet Plan</button>
+
 
     <footer>
         <div class="footer_logoy">
