--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="images/Mighty_Fitness_black.png">
+    <link rel="icon" href="images/Mighty_Fitness_black.webp">
     <title>Login</title>
     <link rel="stylesheet" href="login.css">
     <div id="login">
