--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ var typed = new Typed('#element', {
 </section>
 <section class="s4">
   <div class="s4div">
-      <a href="#"><img src="images/asuppliment.webp" alt=""></a>
+      <a href="suppliment.html"><img src="images/asuppliment.webp" alt=""></a>
       <h1>Suppliments</h1>
       <p>"Maximize your fitness potential with MightyFitness Supplement Guide—unlock essential information, personalized recommendations, and discover optimal sources for your nutritional needs."</p>
   </div>
