--- a/suppliment.html
+++ b/suppliment.html
@@ -68,6 +68,15 @@
                 max-width: 100%;
                 margin-left: 20px;
                 margin-right: 20px;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+            }
+            .div1{
+                margin-left: auto;
+                margin-right: auto;
+                margin-top: 20px;
+
             }
         }
         img{
